prevent hover on ios

--- a/style.css
+++ b/style.css
@@ -66,8 +66,9 @@ td {
   font-size:5em;
 }
 
-td:hover {
+.no-touch td:hover {
   background-color:lightskyblue;
+
 }
 
 #newGame {
